[package]
name = "harbor"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "harbor"
src = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
public-ip = "0.2.2"
local-ip-address = "0.4.4"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
sha2 = "0.10.2"
hex = "0.4.3"
chrono = { version = "0.4.22", features = ["serde"] }
derivative = "2.2.0"
env_logger = "0.9.0"
log = "0.4.17"
